--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    container_name: docker-node-mongo
+    container_name: docker-james-mongo
     restart: always
     build: .
     ports:
